<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Spruce
  ~
  ~     Copyright (c) 2017 WillowTree, Inc.
  ~     Permission is hereby granted, free of charge, to any person obtaining a copy
  ~     of this software and associated documentation files (the "Software"), to deal
  ~     in the Software without restriction, including without limitation the rights
  ~     to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~     copies of the Software, and to permit persons to whom the Software is
  ~     furnished to do so, subject to the following conditions:
  ~     The above copyright notice and this permission notice shall be included in
  ~     all copies or substantial portions of the Software.
  ~     THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~     IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~     FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~     AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~     LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~     OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~     THE SOFTWARE.
  ~
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

    <com.willowtreeapps.spurceexampleapp.widgets.RadioGroupGridLayout
        android:id="@+id/positional_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:visibility="visible">

        <RadioButton
            android:id="@+id/top_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/top_left"/>

        <RadioButton
            android:id="@+id/top_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_right"/>

        <RadioButton
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"/>

        <RadioButton
            android:id="@+id/bottom_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_middle"/>

        <RadioButton
            android:id="@+id/middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle"/>

        <RadioButton
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"/>

        <RadioButton
            android:id="@+id/top_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_middle"/>

        <RadioButton
            android:id="@+id/bottom_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_right"/>

        <RadioButton
            android:id="@+id/bottom_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_left"/>

    </com.willowtreeapps.spurceexampleapp.widgets.RadioGroupGridLayout>

</merge>