<?xml version="1.0" encoding="utf-8"?><!--
  ~     Spruce
  ~
  ~     Copyright (c) 2017 WillowTree, Inc.
  ~     Permission is hereby granted, free of charge, to any person obtaining a copy
  ~     of this software and associated documentation files (the "Software"), to deal
  ~     in the Software without restriction, including without limitation the rights
  ~     to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~     copies of the Software, and to permit persons to whom the Software is
  ~     furnished to do so, subject to the following conditions:
  ~     The above copyright notice and this permission notice shall be included in
  ~     all copies or substantial portions of the Software.
  ~     THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~     IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~     FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~     AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~     LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~     OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~     THE SOFTWARE.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/directional_radio_group" />

            <include layout="@layout/positional_radio_group" />

            <include layout="@layout/continuous_radio_group" />

            <include layout="@layout/cornered_radio_group" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/linear_reversed"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/reversed"
            android:visibility="gone" />

        <TextView
            android:id="@+id/seek_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/duration" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/animation_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/animation_start_duration" />

            <SeekBar
                android:id="@+id/animation_seek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:progress="25" />

            <TextView
                android:id="@+id/animation_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/animation_end_duration" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/code_sample" />

        <EditText
            android:id="@+id/code_sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/code_sample_background"
            android:inputType="none"
            android:textIsSelectable="true" />

    </LinearLayout>

    <!--    This checkbox facilitates of the view exclusion logic-->
    <CheckBox
        android:id="@+id/view_exclusion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exclude" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/interpolator" />

        <Button
            android:id="@+id/btn_interpolator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/linear_interpolator" />

    </LinearLayout>


</LinearLayout>